# AplicativoGremio

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Logicas/: Logicas.js
Telas/cadastro/: CadastroAluno.qml  CadastroEscola.qml
Telas/login/: Login.qml
Telas/principalAluno/: HomeScreenAluno.qml
Telas/principalAluno/Chapas/: ChapasScreenAluno.qml
Telas/principalAluno/Inicio/: InicioScreenAluno.qml
Telas/principalAluno/Sobre/: SobreScreenAluno.qml
Telas/principalAluno/Votos/: VotosScreenAluno.qml
Telas/principalEscola/: HomeScreenEscola.qml
Telas/principalEscola/Alunos/: Alunos.qml
Telas/principalEscola/Chapas/: Chapas.qml
Telas/principalEscola/Inicio/: Inicio.qml
Telas/principalEscola/Sobre/: Sobre.qml
Telas/principalEscola/Votos/: Votos.qml
Telas/splashScreen/: SplashScreen.qml
